2014-05-20  Chris Thomas  <thomas.chris.a@gmail.com>
	
	* Initial fork
	* ChangeLog added
	* README.md :
		* Change name
		* add additional description for planned functionality
	* move relevant JS from index.html to js/html5-fallback.js

    * placeholder fallback now implemented, with options
    * README re-formatted and being treated like documentation on how to use the fallback script.

2014-05-21  Chris Thomas  <thomas.chris.a@gmail.com>

	* Bug fix with my jQuery compatability code
	* Licenses added
	* testing variable added
	* more doc-work (it's pretty well done now.)
	* TODOs for planned functionality
	* More general coding in required
		* select by tag `form` instead of class
		* use selected form as context, so not all forms on page are validated
			when another is submitted, only the submitted form.
