@@ -75,7 +75,7 @@ ol {
 	display:inline-block;
 }
 .form-error {
-	display:none;
+	/*display:none;*/
 	position:absolute;
 	top:0;
 	right:0;
